python/test-data/testTypes2.err
Traceback (most recent call last):
  File "test-data/testTypes2.py", line 4, in <module>
    inc("1")
WyppTypeError: got value of wrong type
given:    '1'
expected: value of type int

context: inc(x: int) -> int
                ^^^
declared at: test-data/testTypes2.py:1
caused by: test-data/testTypes2.py:4
  | inc("1")
